Updated image for Chiny

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <h1 id="valentineText">Chiny, vil du være min Valentine? ❤️</h1>
-    <img id="valentineImage" src="https://i.pinimg.com/originals/3e/6d/75/3e6d75c34a78b60ee94e5d2e65b2444d.jpg" alt="Søt Valentine-bilde">
+    <img id="valentineImage" src="https://github.com/KristianMB13/valentine-website/blob/main/IMG_0118.JPG?raw=true" alt="Søt Valentine-bilde">
     <br><br>
     <button id="yesButton">Ja</button>
     <button id="no">Nei</button>
