Changed final text to 'Jeg elsker deg, bebe ❤️💖'

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         #yesButton {
             background-color: #06d6a0;
-            margin-right: 10px; /* Mellomrom mellom knappene */
+            margin-right: 10px;
         }
 
             #yesButton:hover {
@@ -77,7 +77,7 @@
 
     <script>
         document.getElementById("yesButton").addEventListener("click", function () {
-            document.body.innerHTML = "<h1>Jaaa! 🎉 Jeg elsker deg, Chiny! ❤️</h1><img src='https://i.giphy.com/media/jUwpNzg9IcyrK/giphy.gif' width='300'>";
+            document.body.innerHTML = "<h1>Jeg elsker deg, bebe ❤️💖</h1><img src='https://i.giphy.com/media/jUwpNzg9IcyrK/giphy.gif' width='300'>";
         });
 
         var noButton = document.getElementById("no");
@@ -101,7 +101,7 @@
         ];
 
         noButton.addEventListener("mouseover", function () {
-            var x = Math.random() * (window.innerWidth - 150); // Holder den på skjermen
+            var x = Math.random() * (window.innerWidth - 150);
             var y = Math.random() * (window.innerHeight - 150);
             noButton.style.position = "absolute";
             noButton.style.left = x + "px";
