Oppdatert nei-knapp med flere steg

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
         let step = 0; // Antall ganger hun trykker nei
 
         document.getElementById("yesButton").addEventListener("click", function () {
-            document.body.innerHTML = "<h1>Jeg elsker deg, bebe ❤️💖</h1><img src='https://i.giphy.com/media/jUwpNzg9IcyrK/giphy.gif' width='300'>";
+            document.body.innerHTML = `
+                    <h1>Jeg elsker deg, bebe ❤️💖</h1>
+                    <img src="https://github.com/KristianMB13/valentine-website/blob/main/IMG_0120.JPG?raw=true" width="300">
+                `;
         });
 
         var noButton = document.getElementById("no");
@@ -89,15 +92,15 @@
         var steps = [
             {
                 text: "Er du heeeeelt sikker?",
-                image: "https://media.tenor.com/YTEa_IrG3s8AAAAd/cat-sus-cat.gif"
+                image: "https://github.com/KristianMB13/valentine-website/blob/main/IMG_0119.JPG?raw=true"
             },
             {
                 text: "Er du seriøs nå eller?",
-                image: "https://media.tenor.com/zCEFwDq9XQgAAAAC/crying-cat-cry.gif"
+                image: "https://github.com/KristianMB13/valentine-website/blob/main/IMG_0206.JPG?raw=true"
             },
             {
                 text: "PRØV DEG HAHAHA",
-                image: "https://media.tenor.com/3EzdxOG99tYAAAAC/trollface-laugh.gif"
+                image: "https://github.com/KristianMB13/valentine-website/blob/main/IMG_0920.jpg?raw=true"
             }
         ];
 
