--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             border-radius: 10px;
         }
 
+        .rotated-image {
+            transform: rotate(90deg); /* Roterer bildet som var sidelengs */
+        }
+
         .button-container {
             display: flex;
             justify-content: center;
@@ -96,7 +100,8 @@
             },
             {
                 text: "Er du seriøs nå eller?",
-                image: "https://github.com/KristianMB13/valentine-website/blob/main/IMG_0206.JPG?raw=true"
+                image: "https://github.com/KristianMB13/valentine-website/blob/main/IMG_0206.JPG?raw=true",
+                rotate: true
             },
             {
                 text: "PRØV DEG HAHAHA",
@@ -109,6 +114,14 @@
                 // Oppdater tekst og bilde
                 document.getElementById("valentineText").innerText = steps[step].text;
                 valentineImage.src = steps[step].image;
+
+                // Roter bildet hvis det er markert for rotasjon
+                if (steps[step].rotate) {
+                    valentineImage.classList.add("rotated-image");
+                } else {
+                    valentineImage.classList.remove("rotated-image");
+                }
+
                 step++;
             }
 
@@ -123,7 +136,6 @@
                 });
             }
         });
-
     </script>
 </body>
 </html>
